# Ozma

./: .gitignore  Makefile  RCA_worker_pool_bugs.md  README.md  classifier.go  detection.go  doc.go  go.mod  ingestion.go  normalize.go  orchestration.go  ozma_test.go  package-lock.json  package.json  prompt.go  prompt_guard.go  providers.go  pyproject.toml  requirements.txt  tsconfig.json  tsup.config.ts  types.go  vitest.config.ts  workers.go  yara.go
scripts/: comprehensive_library_test.py  copy-assets.mjs  detection_rate_benchmark.py  l1_l2_connection_trace.py  perf_benchmark.py  run_chunk_safety_e2e.py
src/: index.ts
src/classifiers/: anthropic.ts  base.ts  config.ts  factory.ts  gemini.ts  index.ts  openai.ts
src/detection/: base.ts  detect.ts  index.ts  models.ts  normalize.ts  promptGuard.ts  yara.ts
src/doc_analyse/: __init__.py  orchestration.py  verifier.py
src/doc_analyse/classifiers/: __init__.py  anthropic.py  base.py  config.py  factory.py  gemini.py  groq.py  openai.py
src/doc_analyse/detection/: __init__.py  base.py  cheap.py  default.yara  detect.py  glossary.yaml  models.py  normalize.py  prompt_guard.py  regex.py  yara.py
src/doc_analyse/ingestion/: __init__.py  chunking.py  converters.py  models.py  pipeline.py
src/ingestion/: chunking.ts  converters.ts  index.ts  models.ts  pipeline.ts
src/orchestration/: index.ts  orchestrator.ts  verifier.ts
src/prompt/: classification.md  index.ts  loader.ts
src/workers/: index.ts  pool.ts
tests/: test_chunk_safety_docs.py  test_classifiers.py  test_detect.py  test_detect.ts  test_detection.py  test_end_to_end.py  test_fixes_parser_router_isolation.py  test_followup_fixes.py  test_ingestion.py  test_ingestion.ts  test_layer1_floor.py  test_normalize.py  test_normalize.ts  test_orchestration.py  test_orchestration.ts  test_prompt_guard_detection.py  test_prompt_guard_detection.ts  test_remaining_review_issues.py  test_route_logic_fixes.py  test_workers.py  test_workers.ts  test_yara_rule_additions.py  test_yara_vs_regex_chunk_safety.py
(+10 files in other folders)
