[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "doc-analyse"
version = "0.1.0"
description = "Detect prompt-injection-like spans in documents before exposing them to LLMs."
requires-python = ">=3.9"
dependencies = [
    "beautifulsoup4",
    "lxml",
    "openpyxl",
    "pandas",
    "pdfplumber",
    "pillow",
    "pymupdf",
    "pypdf",
    "pytesseract",
    "PyYAML",
    "python-docx",
    "python-dotenv",
    "tqdm",
]

[project.optional-dependencies]
conversion = [
    "markitdown[all]>=0.1.0; python_version >= '3.10'",
]
llm = [
    "anthropic",
    "google-genai",
    "openai",
]
prompt-guard = [
    "torch",
    "transformers",
]
yara = [
    "yara-python>=4.5.0",
]
dev = [
    "pytest",
    "ruff",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
doc_analyse = ["detection/*.yaml", "detection/*.yara", "prompt/*.md"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py39"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "B",
    "E",
    "F",
    "I",
    "SIM",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"
